# twitter_clone

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  github-actions-demo.yml  heroku-deploy.yml  workflow-pr.yaml
project_twitter/: asgi.py  settings.py  urls.py  wsgi.py
project_twitter/twitter/: admin.py  apps.py  forms.py  signals.py  tests.py  urls.py  views.py
project_twitter/twitter/migrations/: 0001_initial.py  0002_comment_like.py  0003_post_likes_alter_like_post.py  0004_alter_profile_image.py  0005_alter_profile_image.py  0006_alter_profile_bio.py
project_twitter/twitter/models/: __init__.py  comment.py  like.py  post.py  profile.py  relationship.py
project_twitter/twitter/templates/registration/: login.html
project_twitter/twitter/templates/twitter/: 404.html  add_comment.html  editar.html  layout.html  login.html  newsfeed.html  profile.html  register.html
staticfiles/css/: login.css  style.css
staticfiles/js/: script.js
