[tool.poetry]
name = "project_twitter"
version = "0.1.0"
description = "twitter API"
authors = ["Glaucco Lima <glauccolima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
django = "^5.1.1"
factory-boy = "^3.3.1"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
gitpython = "^3.1.43"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
dj-database-url = "^2.2.0"
Pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
factory-boy = "^3.3.1"
pytest-django = "^4.9.0"
pytest-html = "^4.1.1"
pytest-tap = "^3.4"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
